tests/compile_fail/label_wrong_type.rs
#[skuld::label]
const BAD: u32;

fn main() {}
