tests/compile_fail/label_wrong_type.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/label_wrong_type.rs:1:1
  |
1 | #[skuld::label]
  | ^^^^^^^^^^^^^^^ expected `u32`, found `Label`
  |
  = note: this error originates in the attribute macro `skuld::label` (in Nightly builds, run with -Z macro-backtrace for more info)
